squid.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squid-deployment
  labels:
    app: squid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squid
  template:
    metadata:
      labels:
        app: squid
    spec:
      containers:
      - name: squid
        image: ubuntu/squid:4.13-21.10_edge
        ports:
        - containerPort: 3128
        volumeMounts:
        - name: squid-config-vol
          mountPath: /etc/squid/squid.conf
          subPath: squid.conf
        - name: squid-users-vol
          mountPath: /etc/squid/.squid_users
          subPath: .squid_users
      volumes:
        - name: squid-config-vol
          configMap:
            name: squid-config
            items:
            - key: config
              path: squid.conf
        - name: squid-users-vol
          configMap:
            name: squid-users
            items:
            - key: users
              path: .squid_users
---
apiVersion: v1
kind: Service
metadata:
  name: squid
spec:
  selector:
    app: squid
  ports:
    - protocol: TCP
      port: 3128
      targetPort: 3128
  type: LoadBalancer
