ab-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ab-test
  namespace: code-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ab-test.darwinist.io
    secretName: wildcard-darwinist-io
  rules:
  - host: ab-test.darwinist.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: code-server-ab-test
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
 name: code-server-ab-test
 namespace: code-server
spec:
 ports:
 - port: 80
   targetPort: 8080
 selector:
   app: code-server-ab-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: code-server
  name: code-server-ab-test
  labels:
    app: code-server-ab-test
spec:
  serviceName: code-server-ab-test
  replicas: 1
  selector:
    matchLabels:
      app: code-server-ab-test
  template:
    metadata:
      labels:
        app: code-server-ab-test
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: code-server
        image: codercom/code-server
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: home-ab-test
          mountPath: /home/coder
  volumeClaimTemplates:
  - metadata:
      name: home-ab-test
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 40Gi
